[package]
name = "rustls-native-certs"
version = "0.1.0"
edition = "2018"
authors = ["Joseph Birr-Pixton <jpixton@gmail.com>"]
license = "Apache-2.0/ISC/MIT"
readme = "README.md"
description = "rustls-native-certs allows rustls to use the platform native certificate store"
homepage = "https://github.com/ctz/rustls-native-certs"
repository = "https://github.com/ctz/rustls-native-certs"
categories = ["network-programming", "cryptography"]

[dependencies]
rustls = "0.16"

[dev-dependencies]
webpki = "0.21"
webpki-roots = "0"
ring = "0.16"
untrusted = "0.7"

[target.'cfg(windows)'.dependencies]
schannel = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
openssl-probe = "0.1"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "0.3"

[target.'cfg(not(any(windows, target_os = "linux", target_os = "macos")))'.dependencies]
webpki-roots = "0"
